# notifications

./: Dockerfile  pyproject.toml  release.config.js  run.py
.github/workflows/: ci.yml
app/: __init__.py  create_app.py  database.py  models.py  routes.py  run.py
app/service/: __init__.py
app/templates/: index.html
